--- a/Css/index.css
+++ b/Css/index.css
@@ -1,7 +1,7 @@
 h1{font-size: 4em; font-family: "Times New Roman";}
 h2{font-size: 2em; font-family: Cambria;}
 h4{font-size: 1.2em; font-family:"Lucida Bright";}
-summary{font-size: 1em; font-family: Didot;font-style: bold;}
+summary{font-size: 1em; font-family: Didot;}
 h5{font-size:1em; font-family: Didot;}
 p{font-size: 1em; font-family: Helvetica; width: 75%}
 address{font-size: 1em; font-family: Helvetica;}
